# BourneEngine

./: .clang-format  CMakeLists.txt  CMakeSettings.json  CMakeShared.cmake  Readme.md
.github/workflows/: CompileAndTest.yml
Engine/: Application.cpp  Application.hpp  CMakeLists.txt  Config.hpp  Engine.cpp  Engine.hpp  Exit.cpp  Exit.hpp  ExitCode.cpp  ExitCode.hpp  ExitCodes.cpp  ExitCodes.hpp  Main.cpp  Precompiled.hpp  Shared.hpp
Engine/Common/: Common.hpp  Compiler.hpp  Config.hpp  Defines.hpp  Optional.hpp  Standard.cpp  Standard.hpp  Types.hpp  UniquePtr.hpp  Utility.hpp
Engine/Common/Algorithms/: Sorting.hpp
Engine/Common/Containers/: Array.hpp  String.hpp  StringShared.hpp  StringView.hpp
Engine/Common/Debug/: Assert.cpp  Assert.hpp  Debug.cpp  Debug.hpp
Engine/Common/Logger/: Format.cpp  Format.hpp  Logger.cpp  Logger.hpp  LoggerFormat.cpp  LoggerFormat.hpp  LoggerMessage.cpp  LoggerMessage.hpp  LoggerOutputConsole.cpp  LoggerOutputDebugger.cpp  LoggerOutputDebugger.hpp  Message.cpp  Message.hpp  Severity.hpp
Engine/Common/Platform/: CommandLine.cpp  Platform.hpp  Thread.cpp  Thread.hpp
Engine/Common/Structures/: Function.hpp  Optional.hpp  Result.hpp  UniquePtr.hpp
Engine/Common/Utility/: Delegate.hpp  Function.hpp  NonCopyable.hpp  Optional.hpp  Result.hpp  ScopeGuard.hpp  ScopeValue.hpp  Singleton.hpp  UniquePtr.hpp  Utility.hpp
Engine/Graphics/: Config.hpp  Context.hpp  Defines.hpp  Device.hpp  GraphicsStats.cpp  GraphicsStats.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Includes.hpp  RenderApi.cpp  RenderApi.hpp  Shared.hpp  Stats.cpp  Stats.hpp  System.cpp  System.hpp
Engine/Graphics/Direct3D11/: Context.cpp  Includes.hpp  RenderApi.cpp  RenderApi.hpp  Shared.hpp  System.cpp  System.hpp
Engine/Graphics/Direct3D12/: Context.cpp  Device.cpp
Engine/Graphics/Null/: Context.cpp  RenderApi.cpp  RenderApi.hpp  System.cpp  System.hpp
Engine/Graphics/Vulkan/: Allocator.cpp  Allocator.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  Includes.hpp  Instance.cpp  System.cpp  System.hpp  VulkanAllocator.cpp  VulkanAllocator.hpp  VulkanInstance.cpp  VulkanInstance.hpp
Engine/Memory/: Allocator.cpp  Allocator.hpp  DefaultAllocator.cpp  DefaultAllocator.hpp  Defines.hpp  Memory.cpp  Memory.hpp  MemoryOperators.cpp  MemoryStats.cpp  MemoryStats.hpp  MemoryUtility.hpp  OperatorNew.cpp  Operators.cpp  Stats.cpp  Stats.hpp  Utility.hpp
Engine/Memory/Allocators/: AllocatorTraits.hpp  Default.cpp  Default.hpp  DefaultAllocator.cpp  DefaultAllocator.hpp  Inline.hpp  InlineAllocator.cpp  InlineAllocator.hpp
Engine/Platform/: CommandLine.cpp  CommandLine.hpp  Config.hpp  Debug.hpp  Defines.hpp  Includes.hpp  Memory.cpp  Memory.hpp  Platform.cpp  Platform.hpp  Shared.hpp  Thread.cpp  Thread.hpp  Time.cpp  Time.hpp  Timer.cpp  Timer.hpp  Utility.cpp  Utility.hpp  Window.cpp  Window.hpp  WindowEvents.hpp
Engine/Platform/Linux/: Debug.cpp  Defines.hpp  Includes.hpp  Memory.cpp  Thread.cpp  Time.cpp  Timer.cpp  Window.cpp  Window.hpp
Engine/Platform/Null/: Window.cpp  Window.hpp
Engine/Platform/Windows/: Debug.cpp  Defines.hpp  Includes.hpp  Memory.cpp  Thread.cpp  Time.cpp  Timer.cpp  Window.cpp  Window.hpp
Engine/Testing/: Testing.hpp
Example/: CMakeLists.txt  Example.cpp  Main.cpp
Extensions/: CMakeLists.txt
Extensions/Platform/: CMakeLists.txt  Platform.cpp  Shared.hpp
Extensions/Platform/Linux/: Includes.hpp  Window.cpp
Extensions/Platform/Windows/: Debug.cpp  Includes.hpp  Thread.cpp  Time.cpp  Window.cpp
Include/: Shared.hpp
Include/Common/: Assert.hpp  Common.hpp  Debug.hpp  Defines.hpp  Platform.hpp  Shared.hpp  Testing.hpp  Thread.hpp  Types.hpp  Utility.hpp
Include/Container/: Container.hpp  Shared.hpp
Include/Container/Data/: Array.hpp
Include/Containers/: Containers.hpp  Shared.hpp
Include/Core/: CommandLine.hpp  Core.hpp  Shared.hpp
Include/Logger/: Logger.hpp  LoggerMessage.hpp  Shared.hpp
Include/Math/: Math.hpp  Shared.hpp
Include/Memory/: Allocator.hpp  DefaultAllocator.hpp  Memory.hpp  Shared.hpp
Include/Structs/: Shared.hpp  Structs.hpp
Include/Structs/Containers/: Array.hpp
Include/Testing/: Shared.hpp  Testing.hpp
Plugins/: CMakeLists.txt
Source/: CMakeLists.txt  Main.cpp
Source/Common/: Assert.cpp  CMakeLists.txt  Common.cpp  Debug.cpp  Thread.cpp  Version.cmake  Version.hpp.in
Source/Container/: CMakeLists.txt  Container.cpp
Source/Containers/: CMakeLists.txt  Containers.cpp
Source/Core/: CMakeLists.txt  CommandLine.cpp  Core.cpp
Source/Logger/: CMakeLists.txt  Logger.cpp  LoggerFormat.cpp  LoggerFormat.hpp  LoggerMessage.cpp  LoggerOutputConsole.cpp  LoggerOutputConsole.hpp  LoggerOutputDebugger.cpp
Source/Math/: CMakeLists.txt  Math.cpp
Source/Memory/: CMakeLists.txt  DefaultAllocator.cpp  Memory.cpp  OperatorNew.cpp
Source/Structs/: CMakeLists.txt  Structs.cpp
Source/Testing/: CMakeLists.txt  Testing.cpp
Tests/: CMakeLists.txt  Main.cpp  Shared.hpp  Tests.cpp
Tests/Common/: CMakeLists.txt  Shared.hpp  TestArray.cpp  TestCommon.cpp  TestCommon.hpp  TestCommonUtility.cpp  TestFunction.cpp  TestOptional.cpp  TestResult.cpp  TestScopeGuard.cpp  TestScopeValue.cpp  TestSorting.cpp  TestString.cpp  TestStringShared.cpp  TestStringView.cpp  TestUniquePtr.cpp  TestUtility.cpp
Tests/Memory/: ScopedStats.cpp  ScopedStats.hpp  StatsTracker.cpp  StatsTracker.hpp  TestAllocations.cpp  TestAllocators.cpp  TestInlineAllocator.cpp  TestMemory.cpp  TestMemory.hpp  TestMemoryOperators.cpp  TestMemoryStats.cpp  TestMemoryStats.hpp  TestOperators.cpp
Tests/Testing/: MemoryStats.cpp  MemoryStats.hpp  TestDefines.cpp  TestDefines.hpp  TestGuards.cpp  TestGuards.hpp  TestObject.cpp  TestObject.hpp  TestRegistry.cpp  TestRegistry.hpp  Testing.hpp
